--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <br>
                 <I><b>Chi-Chang Lee*</b>, Zhang-Wei Hong*, Pulkit Agrawal (∗ indicates equal contribution)</I>             
                 <br>
-                Submitted to NeurIPS 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
+                Submitted to Conference on Neural Information Processing Systems (NeurIPS) 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
                 <br>
                   <a href="" target="_blank">Paper (coming soon)</a>
               </td>
@@ -209,7 +209,7 @@
                 <br>
                 <I><b>Chi-Chang Lee</b>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
                 <br>
-                  Accepted as a conference paper in ICLR 2023
+                  Accepted as a conference paper in International Conference on Learning Representations (ICLR), 2023
                 <br>
                   <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
                   <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a> |
