--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                   Accepted as a conference paper in International Conference on Learning Representations (ICLR), 2023
                 <br>
                   <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
-                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a> |
+                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
               </td>
             </tr>
           </tbody></table>
