--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Chi-Chang Lee</title>
 
-  <link rel="icon" href="assests/icon.png" />
+  <!-- <link rel="icon" href="assests/icon.png" /> -->
 
   <link rel="stylesheet" type="text/css" href="assests/style.css">
   <link rel="stylesheet" type="text/css" href="assests/academicons.min.css">
@@ -156,8 +156,9 @@
           <tr>
             <td class="all">
               <heading>
-                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Selected Publications<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
+                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Selected Publications in Sensorimotor Learning<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
               </heading>
+              (∗ indicates equal contribution)
             </td>
           </tr>
         </tbody></table>
@@ -171,7 +172,7 @@
               <td class="pub-description">
                 <papertitle>Harnessing Heuristics for Deep Reinforcement Learning via Constrained Optimization</papertitle>
                 <br>
-                <I><b>Chi-Chang Lee*</b>, Zhang-Wei Hong*, Pulkit Agrawal (∗ indicates equal contribution)</I>             
+                <I><u><b>Chi-Chang Lee*</b></u>, Zhang-Wei Hong*, Pulkit Agrawal</I>             
                 <br>
                 Submitted to Conference on Neural Information Processing Systems (NeurIPS) 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
                 <br>
@@ -188,9 +189,9 @@
               <td class="pub-description">
                 <papertitle>Maximizing Velocity by Minimizing Energy</papertitle>
                 <br>
-                <I>Srinath Mahankali*, <b>Chi-Chang Lee*</b>, Gabriel B. Margolis, Zhang-Wei Hong, Pulkit Agrawal (∗ indicates equal contribution)</I>             
+                <I>Srinath Mahankali*, <u><b>Chi-Chang Lee*</b></u>, Gabriel B. Margolis, Zhang-Wei Hong, Pulkit Agrawal</I>             
                 <br>
-                  Accepted as a conference paper in International Conference on Robotics and Automation (ICRA), 2024
+                  International Conference on Robotics and Automation (ICRA), 2024
                 <br>
                   <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf" target="_blank">Paper</a> |
                   <a href="https://srinathm1359.github.io/eipo-locomotion" target="_blank">Website</a> |
@@ -207,9 +208,9 @@
               <td class="pub-description">
                 <papertitle>D4AM: A General Denoising Framework for Downstream Acoustic Models</papertitle>
                 <br>
-                <I><b>Chi-Chang Lee</b>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
+                <I><u><b>Chi-Chang Lee</b></u>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
                 <br>
-                  Accepted as a conference paper in International Conference on Learning Representations (ICLR), 2023
+                  International Conference on Learning Representations (ICLR), 2023
                 <br>
                   <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
                   <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
@@ -238,9 +239,9 @@
               <td class="pub-description">
                 <papertitle>LC4SV: A Denoising Framework Learning to Compensate for Unseen Speaker Verification Models</papertitle>
                 <br>
-                <I><b>Chi-Chang Lee</b>, Hong-Wei Chen, Chu-Song Chen, Hsin-Min Wang, Tsung-Te Liu, Yu Tsao</I>             
+                <I><u><b>Chi-Chang Lee</b></u>, Hong-Wei Chen, Chu-Song Chen, Hsin-Min Wang, Tsung-Te Liu, Yu Tsao</I>             
                 <br>
-                Accepted as a conference paper in IEEE Automatic Speech Recognition and Understanding Workshop (ASRU), 2023
+                IEEE Automatic Speech Recognition and Understanding Workshop (ASRU), 2023
                 <br>
                 <a href="https://arxiv.org/pdf/2311.16604" target="_blank">Paper</a> |
                   <a href="" target="_blank">Code (coming soon)</a>
@@ -256,9 +257,9 @@
               <td class="pub-description">
                 <papertitle>NASTAR: Noise Adaptive Speech Enhancement with Target-Conditional Resampling</papertitle>
                 <br>
-                <I><b>Chi-Chang Lee</b>, Cheng-Hung Hu, Yu-Chen Lin, Chu-Song Chen, Hsin-Min Wang, Yu Tsao</I>             
+                <I><u><b>Chi-Chang Lee</b></u>, Cheng-Hung Hu, Yu-Chen Lin, Chu-Song Chen, Hsin-Min Wang, Yu Tsao</I>             
                 <br>
-                  Accepted as a conference paper in INTERSPEECH, 2022
+                  INTERSPEECH, 2022
                 <br>
                   <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Paper</a> |
                   <a href="https://github.com/ChangLee0903/NASTAR" target="_blank">Code</a>
@@ -274,9 +275,9 @@
               <td class="pub-description">
                 <papertitle>SERIL: Noise adaptive speech enhancement using regularization-based incremental learning</papertitle>
                 <br>
-                <I><b>Chi-Chang Lee</b>, Yu-Chen Lin, Hsuan-Tien Lin, Hsin-Min Wang, Yu Tsao</I>                     
+                <I><u><b>Chi-Chang Lee</b></u>, Yu-Chen Lin, Hsuan-Tien Lin, Hsin-Min Wang, Yu Tsao</I>                     
                 <br>
-                Accepted as a conference paper in INTERSPEECH, 2020
+                INTERSPEECH, 2020
                 <br>
                   <a href="https://arxiv.org/pdf/2005.11760" target="_blank">Paper</a> |
                   <a href=" https://github.com/ChangLee0903/SERIL" target="_blank">Code</a>
