--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <heading>
                 <i class="far fa-file-alt"></i>&nbsp;&nbsp;Selected Publications in Sensorimotor Learning<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
               </heading>
-              (∗ indicates equal contribution)
+              <br>(∗ indicates equal contribution)
             </td>
           </tr>
         </tbody></table>
