--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </td>
 
             <td style="padding: 2%; width: 25%; max-width: 25%;">
-              <img src="assests/profile_photo.png" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/profile_photo.png');" onmouseout="img_unhover(this, 'assests/profile_photo.png');" />
+              <img src="assests/ccl.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/profile_photo.png');" onmouseout="img_unhover(this, 'assests/profile_photo.png');" />
             </td>
           </tr>
         </tbody></table>
