--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
               </p>
 
               <p>
+                I am currently a research assistant at <a href="https://www.nycu.edu.tw/nycu/en/index">Yang Ming Chiao Tung University</a> in Taiwan, 
+                working under the supervision of Prof. <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>. 
+                Since July 2023, I have also been collaborating with the <a herf="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour">Improbable AI Lab</a>, 
+                led by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a> at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>. 
+                I earned both my Bachelor’s and Master’s degrees in Engineering Science and Computer Science from National Taiwan University, 
+                where I worked closely with Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof. <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a>.
+                Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems. Since many audio applications involve high-dimensional sequential decision-making, I concentrated on designing auxiliary learning tasks to enhance the performance of primary downstream tasks.
+
+                Beyond the modality of input data for models, 
+                I became particularly interested in how high-dimensional information flows from the perception stage to the decision-making stage and how these two modules can effectively collaborate. 
+                Consequently, in 2023, I shifted my research focus to sensorimotor learning. 
+                My current work now centers on the following three areas.
+
+
+                <!-- I'm a 4th year Ph.D. student in Electrical Engineering and Computer Science (EECS) at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>, advised by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>.  I finished my B.S. degree and M.S. degree at National Tsing Hua University in close colloaboration with Prof. <a href="https://scholar.google.com/citations?user=5mYNdo0AAAAJ&hl=en">Chun-Yi Lee</a> and Prof. <a href="https://aliensunmin.github.io/">Min Sun</a>. Previously, I was fortunate to work with Prof. <a href="https://www.ias.informatik.tu-darmstadt.de/Team/JanPeters">Jan Peters</a> at TU Darmstadt in Germany. Also, I was working at <a href="https://preferred.jp/en/company/">Preferred Networks</a> with Dr. <a href="https://gjmaeda.github.io/">Guilherme Maeda</a> and <a href="https://prabhatnagarajan.com/">Prabhat Nagarajan</a>.
+                Prior to 2023, my research experiences mainly focusd on front-end task-aware processing for downstream audio application, especiaally in robust speech-to-text systems. Most audio applications can be viewed as a high-dimensional sequential decision-making problem, which my research experiences are about how to formulate auxiliary learning task to improve the downstream main task. I am particularly interested in the connection between how can a high-dimensional information can propogate to the downstream decision-making agent and how can these two modules cooperate with each other.
+                Accordingly, after 2023, I turn my current interests into sesorimotor learning. Specifically, I am working on: 
                 <b>Research</b>: My aim is to address practical <b>search problems</b> using tools for sequential decision-making such as reinforcement learning (RL) and the multi-arm bandit framework. I broadly interpret search challenges as discovery of nearly optimal solutions within an huge search space. Addressing these challenges is akin to strike a balance between exploration (deciding when to try the unknown) and exploitation (deciding when to leverage what's known). Thus, I believe that the sequential decision-making principles of balancing exploration and exploitation are crucial for devising effective solutions for search challenges. My research is focused on the following key areas:
                 <ul>
                   <li><b>Sample Efficient RL:</b> Given that resolving many search problems necessitates costly real-world interactions or the use of high-fidelity simulations, my early works are dedicated to creating RL algorithms that can learn effective policies more efficiently with minimal human intervention and less data. (References: <a href="https://arxiv.org/pdf/2310.04413.pdf">NeurIPS'23</a>, <a href="https://openreview.net/forum?id=Hk3m8Nh7mn">ICML'23</a>, <a href="https://arxiv.org/abs/2307.12983">ICML'23</a>, <a href="https://openreview.net/pdf?id=OhUAblg27z">ICLR'23</a>, <a href="https://openreview.net/forum?id=LedObtLmCjS">ICLR'22</a>, and  <a href="https://openreview.net/forum?id=OXRZeMmOI7a">ICLR'22</a>)  </li>
@@ -61,7 +78,7 @@
 
               <p> <b>Bio</b>: 
                 I'm a 4th year Ph.D. student in Electrical Engineering and Computer Science (EECS) at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>, advised by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>.  I finished my B.S. degree and M.S. degree at National Tsing Hua University in close colloaboration with Prof. <a href="https://scholar.google.com/citations?user=5mYNdo0AAAAJ&hl=en">Chun-Yi Lee</a> and Prof. <a href="https://aliensunmin.github.io/">Min Sun</a>. Previously, I was fortunate to work with Prof. <a href="https://www.ias.informatik.tu-darmstadt.de/Team/JanPeters">Jan Peters</a> at TU Darmstadt in Germany. Also, I was working at <a href="https://preferred.jp/en/company/">Preferred Networks</a> with Dr. <a href="https://gjmaeda.github.io/">Guilherme Maeda</a> and <a href="https://prabhatnagarajan.com/">Prabhat Nagarajan</a>.
-              </p>
+              </p> -->
 
               <p style="text-align: center;">
                 <a href="mailto:r08922a27@csie.ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
