--- a/index.html
+++ b/index.html
@@ -57,13 +57,20 @@
                 led by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a> at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>. 
                 I earned both my Bachelor’s and Master’s degrees in Engineering Science and Computer Science from National Taiwan University, 
                 where I worked closely with Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof. <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a>.
-                Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems. Since many audio applications involve high-dimensional sequential decision-making, I concentrated on designing auxiliary learning tasks to enhance the performance of primary downstream tasks.
-
+                Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems 
+                (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). 
+                
+                <br>
                 Beyond the modality of input data for models, 
                 I became particularly interested in how high-dimensional information flows from the perception stage to the decision-making stage and how these two modules can effectively collaborate. 
                 Consequently, in 2023, I shifted my research focus to sensorimotor learning. 
-                My current work now centers on the following three areas.
-
+                My current works now center on the following two areas:
+                <ul>
+                  <li><b>Heuristic Harnessing and Robustness in DRL:</b> 
+                    In practice, traditional DRL approaches often rely on heuristic rewards to encourage survival and exploration in complex robotic environments. This reliance primarily stems from the limitations of finite sample sizes, which hinder the derivation of ideal expectations. Under such constraints, achieving unbiased optimization—such as through potential-based reward shaping—becomes empirically infeasible. My recent work introduces a new optimization framework aimed at addressing the exploitation-exploration dilemma under finite sample conditions, allowing for more accurate approximations of optimal policies and improving the robustness of heuristic selections. 
+                    (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
+                  <li><b>Perceivability Awareness for Decision-Making:</b> (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)</li> 
+                </ul>
 
                 <!-- I'm a 4th year Ph.D. student in Electrical Engineering and Computer Science (EECS) at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>, advised by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>.  I finished my B.S. degree and M.S. degree at National Tsing Hua University in close colloaboration with Prof. <a href="https://scholar.google.com/citations?user=5mYNdo0AAAAJ&hl=en">Chun-Yi Lee</a> and Prof. <a href="https://aliensunmin.github.io/">Min Sun</a>. Previously, I was fortunate to work with Prof. <a href="https://www.ias.informatik.tu-darmstadt.de/Team/JanPeters">Jan Peters</a> at TU Darmstadt in Germany. Also, I was working at <a href="https://preferred.jp/en/company/">Preferred Networks</a> with Dr. <a href="https://gjmaeda.github.io/">Guilherme Maeda</a> and <a href="https://prabhatnagarajan.com/">Prabhat Nagarajan</a>.
                 Prior to 2023, my research experiences mainly focusd on front-end task-aware processing for downstream audio application, especiaally in robust speech-to-text systems. Most audio applications can be viewed as a high-dimensional sequential decision-making problem, which my research experiences are about how to formulate auxiliary learning task to improve the downstream main task. I am particularly interested in the connection between how can a high-dimensional information can propogate to the downstream decision-making agent and how can these two modules cooperate with each other.
@@ -193,7 +200,7 @@
                 <br>
                 Submitted to Conference on Neural Information Processing Systems (NeurIPS) 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
                 <br>
-                  <a href="" target="_blank">Paper (coming soon)</a>
+                  <a href="https://changlee0903.github.io/pubs/HEPO.pdf" target="_blank">Paper (submitting)</a>
               </td>
             </tr>
           </tbody></table>
