--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                 Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems 
                 (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). 
                 
-                <br>
+                <br><br>
                 Beyond the modality of input data for models, 
                 I became particularly interested in how high-dimensional information flows from the perception stage to the decision-making stage and how these two modules can effectively collaborate. 
                 Consequently, in 2023, I shifted my research focus to sensorimotor learning. 
                 My current works now center on the following two areas:
                 <ul>
                   <li><b>Heuristic Harnessing and Robustness in DRL:</b> 
-                    In practice, traditional DRL approaches often rely on heuristic rewards to encourage survival and exploration in complex robotic environments. This reliance primarily stems from the limitations of finite sample sizes, which hinder the derivation of ideal expectations. Under such constraints, achieving unbiased optimization—such as through potential-based reward shaping—becomes empirically infeasible. My recent work introduces a new optimization framework aimed at addressing the exploitation-exploration dilemma under finite sample conditions, allowing for more accurate approximations of optimal policies and improving the robustness of heuristic selections. 
+                    In practice, DRL training with finite sample sizes hinders the derivation of ideal expectations typically required by theoretical standards. Under these constraints, achieving unbiased optimization—such as with potential-based reward shaping—becomes empirically infeasible. Traditional DRL approaches often rely on heuristic rewards to encourage survival and exploration in complex robotic environments. My recent work focuses on addressing the exploitation-exploration dilemma under finite sample conditions, enabling more accurate approximations of optimal policies and improving the robustness of heuristic selections—greatly reducing the effort required for tedious heuristic design.
                     (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
                   <li><b>Perceivability Awareness for Decision-Making:</b> (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)</li> 
                 </ul>
