--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </p>
 
               <p>
-                I am currently a research assistant at <a href="https://www.nycu.edu.tw/nycu/en/index">Yang Ming Chiao Tung University</a> in Taiwan, 
+                I am currently a research assistant in the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> at <a href="https://www.nycu.edu.tw/nycu/en/index">Yang Ming Chiao Tung University</a> in Taiwan, 
                 working under the supervision of Prof. <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>. 
                 Since July 2023, I have also been collaborating with the <a herf="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour">Improbable AI Lab</a>, 
                 led by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a> at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>. 
@@ -61,15 +61,20 @@
                 (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). 
                 
                 <br><br>
-                Beyond the modality of input data for models, 
-                I became particularly interested in how high-dimensional information flows from the perception stage to the decision-making stage and how these two modules can effectively collaborate. 
-                Consequently, in 2023, I shifted my research focus to sensorimotor learning. 
+                Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively. I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
                 My current works now center on the following two areas:
                 <ul>
                   <li><b>Heuristic Harnessing and Robustness in DRL:</b> 
                     In practice, DRL training with finite sample sizes hinders the derivation of ideal expectations typically required by theoretical standards. Under these constraints, achieving unbiased optimization—such as with potential-based reward shaping—becomes empirically infeasible. Traditional DRL approaches often rely on heuristic rewards to encourage survival and exploration in complex robotic environments. My recent work focuses on addressing the exploitation-exploration dilemma under finite sample conditions, enabling more accurate approximations of optimal policies and improving the robustness of heuristic selections—greatly reducing the effort required for tedious heuristic design.
                     (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
-                  <li><b>Perceivability Awareness for Decision-Making:</b> (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)</li> 
+                  <li><b>Perceivability Awareness for Decision-Making:</b> 
+                    A perception model might converge to a local minimum with similar total loss levels; 
+                    however, the location of errors can significantly impact planning decisions. 
+                    For instance, in an autonomous vehicle's planning scenario, whether the errors occur in distant or proximal areas relative to the ego vehicle is crucial for effective planning. 
+                    My early work focused on planning-aware optimization to ensure that perception model training converges to a local minimum that aligns with both perception and planning goals.
+                    In addition, I am currently working on a project in the HCIS Lab that explores how perceivability can be integrated into policy learning and how to minimize perception requirements for decision-making when the agent has access to only non-privileged information.
+                    (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)                    
+                  </li> 
                 </ul>
 
                 <!-- I'm a 4th year Ph.D. student in Electrical Engineering and Computer Science (EECS) at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>, advised by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>.  I finished my B.S. degree and M.S. degree at National Tsing Hua University in close colloaboration with Prof. <a href="https://scholar.google.com/citations?user=5mYNdo0AAAAJ&hl=en">Chun-Yi Lee</a> and Prof. <a href="https://aliensunmin.github.io/">Min Sun</a>. Previously, I was fortunate to work with Prof. <a href="https://www.ias.informatik.tu-darmstadt.de/Team/JanPeters">Jan Peters</a> at TU Darmstadt in Germany. Also, I was working at <a href="https://preferred.jp/en/company/">Preferred Networks</a> with Dr. <a href="https://gjmaeda.github.io/">Guilherme Maeda</a> and <a href="https://prabhatnagarajan.com/">Prabhat Nagarajan</a>.
