--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     however, the location of errors can significantly impact planning decisions. 
                     For instance, in an autonomous vehicle's planning scenario, whether the errors occur in distant or proximal areas relative to the ego vehicle is crucial for effective planning. 
                     My early work focused on planning-aware optimization to ensure that perception model training converges to a local minimum that aligns with both perception and planning goals.
-                    In addition, I am currently working on a project in the HCIS Lab that explores how perceivability can be integrated into policy learning and how to minimize perception requirements for decision-making when the agent has access to only non-privileged information.
+                    In addition, I am currently working on a project in the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that explores how perceivability can be integrated into policy learning and how to minimize perception requirements for decision-making when the agent has access to only non-privileged information.
                     (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)                    
                   </li> 
                 </ul>
