--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </p>
             </td>
 
-            <td style="padding: 2%; width: 30%; height: 30%; max-width: 30%;">
+            <td style="padding: 2%; width: 30%; height: 80%; max-width: 30%; max-height: 80%;">
               <img src="assests/ccl.jpg" style="border-radius: 100%;" onmouseover="img_hover(this, 'assests/ccl.jpg');" onmouseout="img_unhover(this, 'assests/ccl.jpg');" />
             </td>
           </tr>
