--- a/index.html
+++ b/index.html
@@ -100,8 +100,32 @@
               </p>
             </td>
 
-            <td style="padding: 2%; width: 30%; height: 80%; max-width: 30%; max-height: 80%;">
+            <td style="padding: 2%; width: 30%; max-width: 30%;">
               <img src="assests/ccl.jpg" style="border-radius: 100%;" onmouseover="img_hover(this, 'assests/ccl.jpg');" onmouseout="img_unhover(this, 'assests/ccl.jpg');" />
+            </td>
+            <td style="padding: 2%; width: 70%; vertical-align: middle;">
+              <p>
+                My current works now center on the following two areas:
+                <ul>
+                  <li><b>Heuristic Harnessing and Robustness in DRL:</b> 
+                    In practice, DRL training with finite sample sizes hinders the derivation of ideal expectations typically required by theoretical standards. Under these constraints, achieving unbiased optimization—such as with potential-based reward shaping—becomes empirically infeasible. Traditional DRL approaches often rely on heuristic rewards to encourage survival and exploration in complex robotic environments. My recent work focuses on addressing the exploitation-exploration dilemma under finite sample conditions, enabling more accurate approximations of optimal policies and improving the robustness of heuristic selections—greatly reducing the effort required for tedious heuristic design.
+                    (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
+                  <li><b>Perceivability Awareness for Decision-Making:</b> 
+                    A perception model might converge to a local minimum with similar total loss levels; 
+                    however, the location of errors can significantly impact planning decisions. 
+                    For instance, in an autonomous vehicle's planning scenario, whether the errors occur in distant or proximal areas relative to the ego vehicle is crucial for effective planning. 
+                    My early work focused on planning-aware optimization to ensure that perception model training converges to a local minimum that aligns with both perception and planning goals.
+                    In addition, I am currently working on a project in the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that explores how perceivability can be integrated into policy learning and how to minimize perception requirements for decision-making when the agent has access to only non-privileged information.
+                    (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)                    
+                  </li> 
+                </ul>
+              </p>
+              <p style="text-align: center;">
+                <a href="mailto:r08922a27@csie.ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
+                <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
+                <a href="files/ccl-cv.pdf" target="_blank"><i class="ai ai-cv-square ai-2x"></i></a>&nbsp;
+                <a href="https://scholar.google.com/citations?user=r225tRsAAAAJ&hl" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>&nbsp;
+              </p>
             </td>
           </tr>
         </tbody></table>
