--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <td style="padding: 2%; width: 30%; max-width: 30%;">
               <img src="assests/ccl.jpg" style="border-radius: 100%;" onmouseover="img_hover(this, 'assests/ccl.jpg');" onmouseout="img_unhover(this, 'assests/ccl.jpg');" />
             </td>
-            <td style="padding: 2%; width: 70%; vertical-align: middle;">
+            <td style="padding: 2%; width: 70%; horizontal-align: middle;">
               <p>
                 My current works now center on the following two areas:
                 <ul>
