--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
                 Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively. I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
                 My current works now center on the following two areas:
                 <ul>
-                  <li><b>Heuristic Harnessing and Robustness in DRL:</b> 
-                    In practice, DRL training with finite sample sizes hinders the derivation of ideal expectations typically required by theoretical standards. Under these constraints, achieving unbiased optimization—such as with potential-based reward shaping—becomes empirically infeasible. Traditional DRL approaches often rely on heuristic rewards to encourage survival and exploration in complex robotic environments. My recent work focuses on addressing the exploitation-exploration dilemma under finite sample conditions, enabling more accurate approximations of optimal policies and improving the robustness of heuristic selections—greatly reducing the effort required for tedious heuristic design.
-                    (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
-                  <li><b>Perceivability Awareness for Decision-Making:</b> 
+                  <li><b>Harnessing Heuristic and its Robustness in DRL:</b> 
+                    In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, primarily due to the limitation of finite sample sizes for each training batch. These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, such as potential-based reward shaping. My recent work addresses the exploitation-exploration dilemma under finite sample conditions, enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections and significantly reducing the effort required for tedious heuristic design. (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
+                  <li><b>Connecting Entanglement in Perceivability and Decision-Making:</b> 
                     A perception model might converge to a local minimum with similar total loss levels; 
                     however, the location of errors can significantly impact planning decisions. 
                     For instance, in an autonomous vehicle's planning scenario, whether the errors occur in distant or proximal areas relative to the ego vehicle is crucial for effective planning. 
@@ -93,7 +92,7 @@
               </p> -->
 
               <p style="text-align: center;">
-                <a href="mailto:r08922a27@csie.ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
+                <a href="mailto:changlee@ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
                 <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
                 <a href="files/ccl-cv.pdf" target="_blank"><i class="ai ai-cv-square ai-2x"></i></a>&nbsp;
                 <a href="https://scholar.google.com/citations?user=r225tRsAAAAJ&hl" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>&nbsp;
