--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively. I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
                 My current works now center on the following two areas:
                 <ul>
-                  <li><b>Harnessing Heuristic and its Robustness in DRL:</b> 
+                  <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
                     In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
                     primarily due to the limitation of finite sample sizes for each training batch. 
                     These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
