--- a/index.html
+++ b/index.html
@@ -62,21 +62,6 @@
                 
                 <br><br>
                 Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively. I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
-                My current works now center on the following two areas:
-                <ul>
-                  <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
-                    In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
-                    primarily due to the limitation of finite sample sizes for each training batch. 
-                    These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
-                    such as potential-based reward shaping. 
-                    My recent work addresses the exploitation-exploration dilemma under finite sample conditions, 
-                    enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections with significantly reduced design effort. (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
-                  <li><b>Connecting Entanglement in Perceivability and Decision-Making:</b> 
-                    An agent cannot effectively make decisions without perceiving the necessary patterns. While trajectories for policy training are collected by experts using privileged information, but only sensor features (partial observations) are available during deployment, reproducing the same decision-making outcomes becomes challenging due to insufficient patterns in these partial observations. Even if a perception model might converge to a local minimum with similar total loss levels, different error situations can indicate varying degrees of perceivability, significantly impacting decision-making. My earlier work focused on optimizing perception model training to ensure it aligns with both perception and downstream objectives. In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception for decision-making.
-                    (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)                    
-                  </li> 
-                </ul>
-
               <p style="text-align: center;">
                 <a href="mailto:changlee@ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
                 <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
@@ -90,7 +75,32 @@
             </td>
           </tr>
         </tbody></table>
-
+        <table><tbody>
+          <tr>
+            <td class="all">
+              <heading>
+                <i class="fas fa-briefcase"></i>&nbsp;&nbsp;Research<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(0)" id="exp-btn"></i>
+              </heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <br>
+        <div style="height: 300px; overflow: auto;" id="exp-div">
+          My current works now center on the following two areas:
+                <ul>
+                  <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
+                    In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
+                    primarily due to the limitation of finite sample sizes for each training batch. 
+                    These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
+                    such as potential-based reward shaping. 
+                    My recent work addresses the exploitation-exploration dilemma under finite sample conditions, 
+                    enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections with significantly reduced design effort. (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
+                  <li><b>Connecting Entanglement in Perceivability and Decision-Making:</b> 
+                    An agent cannot effectively make decisions without perceiving the necessary patterns. While trajectories for policy training are collected by experts using privileged information, but only sensor features (partial observations) are available during deployment, reproducing the same decision-making outcomes becomes challenging due to insufficient patterns in these partial observations. Even if a perception model might converge to a local minimum with similar total loss levels, different error situations can indicate varying degrees of perceivability, significantly impacting decision-making. My earlier work focused on optimizing perception model training to ensure it aligns with both perception and downstream objectives. In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception for decision-making.
+                    (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)                    
+                  </li> 
+                </ul>
+        </div>
         <!--experience-->
         <table><tbody>
           <tr>
