--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </tbody></table>
         <br>
         <div style="height: 300px; overflow: auto;" id="exp-div">
-          <p>    
+          <p style="text-align: center;">    
             My current works now center on the following two areas:
                 <ul>
                   <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
