--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </tr>
         </tbody></table>
         <div style="height: 300px; overflow: auto;" id="exp-div">
-          <p style="text-align: center;">    
+          <p style="text-align: left;">    
             My current works now center on the following two areas:
                 <ul>
                   <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
