--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             </td>
           </tr>
         </tbody></table>
-        <div style="height: 300px; overflow: auto;" id="exp-div">
-          <p style="text-align: left;">    
+        <div style="height: 800px; overflow: auto;" id="exp-div">
+          <p style="text-align: center;">    
             My current works now center on the following two areas:
                 <ul>
                   <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
