--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). 
                 
                 <br><br>
-                Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively. I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
+                <!-- Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively.  -->
+                I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
                 My current works now center on <b>Harnessing Heuristic and its Robustness for DRL</b> and <b>Connecting Entanglement in Perceivability and Decision-Making</b>.
                 <!-- <ul>
                   <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
