--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </tbody></table>
         <br>
         <div style="height: 400px; overflow: auto;" id="pub-div">
-          <b>Harnessing Heuristic and its Robustness for DRL:</b> 
+          <b>Harnessing Heuristic and its Robustness for DRL - </b> 
           In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
           primarily due to the limitation of finite sample sizes for each training batch. 
           <!-- These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
@@ -223,7 +223,7 @@
             </tr>
           </tbody></table>
           <br><br>
-          <b>Connecting Entanglement in Perceivability and Decision-Making:</b> 
+          <b>Connecting Entanglement in Perceivability and Decision-Making - </b> 
           An agent cannot effectively make decisions without perceiving the necessary patterns. 
           While trajectories for policy training are collected by experts using privileged information, 
           but only sensor features (partial observations) are available during deployment, 
