--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <table><tbody>
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/avatar_mit.png" />
+                <img src="imgs/mit.png" />
               </td>
 
               <td class="exp-description">
