--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/hcis.png"  />
+                <img src="imgs/HCIS.png"  />
               </td>
 
               <td class="exp-description">
