--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <table><tbody>
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/mit.png" />
+                <img src="imgs/mit.png" height="80"/>
               </td>
 
               <td class="exp-description">
@@ -122,7 +122,7 @@
 
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/HCIS.png"  />
+                <img src="imgs/HCIS.png" height="80" />
               </td>
 
               <td class="exp-description">
@@ -136,7 +136,7 @@
             </tr>
             <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/CITI.jpeg"  />
+                  <img src="imgs/CITI.jpeg" height="80" />
                 </td>
 
                 <td class="exp-description">
@@ -150,7 +150,7 @@
               </tr>
               <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/NII.jpeg"  />
+                  <img src="imgs/NII.jpeg" height="80" />
                 </td>
 
                 <td class="exp-description">
