--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <table><tbody>
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/mit.png" />
+                <img src="imgs/mit.png" width="75%" height="75%"/>
               </td>
 
               <td class="exp-description">
@@ -119,10 +119,10 @@
                 Advisor: <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>
               </td>
             </tr>
-            <br>
+            
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/HCIS.png"  />
+                <img src="imgs/HCIS.png"  width="75%" height="75%"/>
               </td>
 
               <td class="exp-description">
@@ -134,10 +134,9 @@
                 Advisor: <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>
               </td>
             </tr>
-            <br>
             <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/CITI.jpeg"  />
+                  <img src="imgs/CITI.jpeg" width="75%" height="75%" />
                 </td>
 
                 <td class="exp-description">
@@ -149,10 +148,9 @@
                   Advisor: <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a>
                 </td>
               </tr>
-              <br>
               <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/NII.jpeg"  />
+                  <img src="imgs/NII.jpeg" width="75%" height="75%" />
                 </td>
 
                 <td class="exp-description">
